--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,22 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+body {
+  overflow: scroll;
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Exo 2", sans-serif;
+}
+
+fieldset {
+  border: none;
+  text-align: left;
+  padding: 0%;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+h2 {
+  font-size: 40px;
+}
