--- a/src/components/accounts/Accounts.css
+++ b/src/components/accounts/Accounts.css
@@ -1,7 +1,6 @@
 .account {
   display: flex;
   flex-direction: row;
-  /* border: solid black; */
   width: 80%;
   margin-bottom: 10px;
   align-items: center;
@@ -12,8 +11,6 @@
   margin-bottom: 0;
   height: 50%;
   padding: 10px;
-  /* box-shadow: 0px 3px 4px lightgray; */
-  /* background-color: #38a870; */
   font-size: 30px;
   border: solid lightgray;
 }
@@ -21,18 +18,18 @@
 .accounts-container {
   margin: auto;
   width: 30%;
-  /* border: solid black; */
 }
 
 .accounts {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
-  /* margin: auto; */
+  margin-top: 50px;
 }
 .accounts-header {
-  text-align: center;
+  margin-left: 24.5%;
+  margin-top: 10%;
+  margin-bottom: 0;
 }
 .view-account-btn {
   background: none;
@@ -41,4 +38,15 @@
 
 .view-account-btn:hover {
   color: lightgray;
+}
+
+.add-account-btn {
+  background: none;
+  border: none;
+  margin-left: 82.7%;
+  margin-bottom: 2%;
+}
+
+.add-account-btn:hover {
+  color: #2e8d5e;
 }
