--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -11,13 +11,11 @@
 .login-flex {
   display: flex;
   flex-direction: row;
-  /* border: red solid; */
   height: 100vh;
   width: 100vw;
 }
 
 .container-login {
-  /* border: black solid; */
   flex-basis: 50%;
   display: flex;
   flex-direction: column;
@@ -29,7 +27,6 @@
   width: 60%;
   display: flex;
   flex-direction: column;
-  /* border: solid #000000; */
   flex-basis: 20%;
 }
 
@@ -38,7 +35,6 @@
   color: #38a870;
   font-weight: 600;
   font-size: 20px;
-  /* font-style: bold; */
 }
 .login-btn {
   background-color: #38a870;
@@ -68,11 +64,19 @@
   display: flex;
   flex-direction: column;
   width: 50vw;
-  height: 100vh;
+  height: 50vh;
   margin: auto;
   justify-content: center;
 }
 
-.register-link-secondary {
-  margin-left: 43.5%;
+.register-page {
+  display: flex;
+  flex-direction: column;
+  margin-top: 18%;
+}
+.register-link-container {
+  margin: auto;
+}
+.login-header {
+  margin-bottom: 80px;
 }
