--- a/src/components/forms/Forms.css
+++ b/src/components/forms/Forms.css
@@ -44,3 +44,7 @@ select.form-control {
   border: solid black;
   border-width: thin;
 }
+.form-btn-primary:active {
+  top: 2px;
+  position: relative;
+}
