--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ button:focus-visible {
 body {
   overflow-x: hidden;
   margin: 0;
-  min-height: 100vh;
+  max-height: 100vh;
   font-family: "Exo 2", sans-serif;
 }
 
