--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,18 +1,15 @@
 .navbar {
   display: flex;
-  justify-content: flex-start;
   flex-wrap: nowrap;
   box-shadow: 0px 3px 4px lightgray;
   width: 100vw;
   margin: 0;
   padding: 1.75rem;
-  justify-content: center;
+  align-items: center;
 }
 .navbar-item {
   list-style-type: none;
-  flex-basis: 5%;
-  text-align: center;
-  margin-right: 4%;
+  margin-right: 50px;
 }
 
 .navbar-link {
@@ -23,16 +20,20 @@
   font-size: 1.1rem;
 }
 
-.navbar-logout {
-  margin-left: 70%;
+.logo {
+  margin-right: 40px;
 }
 
-@media screen and (min-width: 800px) {
+.navbar-logout {
+  margin-left: 82%;
+}
+
+@media screen and (min-width: 800px) and (max-width: 3100px) {
   .navbar-logout {
-    margin-left: 65%;
+    margin-left: 80%;
   }
   .navbar-item {
-    margin-right: 6%;
+    margin-right: 3%;
   }
 }
 
