--- a/src/components/forms/Forms.css
+++ b/src/components/forms/Forms.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .create-bill,
@@ -10,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
+  width: 50%;
   margin: auto;
   margin-top: 8%;
 }
@@ -38,10 +39,15 @@
 .save-btn:hover {
   background-color: #39a870;
   color: white;
-  border: none;
+  border-color: #39a870;
 }
-
-.save-btn {
+.edit-btn:hover {
+  background-color: #39a870;
+  color: white;
+  border-color: #39a870;
+}
+.save-btn,
+.edit-btn {
   border-color: #39a870;
   color: #39a870;
   background-color: white;
@@ -60,14 +66,17 @@ select.form-control {
 .form-btn-primary {
   background-color: #f6665f;
   width: 200px;
-  margin-left: 40%;
+  margin-left: 39%;
+  justify-content: center;
   height: 50px;
-  font-weight: bold;
-  font-size: 1rem;
+  /* font-weight: bold; */
+  font-size: large;
   border: none;
   margin-top: 10px;
-  border: solid black;
+  border: solid #f6665f;
   border-width: thin;
+  color: white;
+  border-radius: 4px;
 }
 .form-btn-primary:active {
   top: 2px;
@@ -83,7 +92,3 @@ select.form-control {
   margin-bottom: 30px;
   height: 50px;
 }
-
-/* .bill-form-title {
-  background-color: #186b8b;
-} */
